--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Title</h1>
 
-        <img src="C:\Users\maega\OneDrive\Pictures\cubes_edges_dark_1186925_1920x1080.jpg" alt="Random cube background" width="200px">
+        <img src="images\cubes_edges_dark_1186925_1920x1080.jpg" alt="Random cube background" width="200px">
 
         <form>
             <label for="username">Username</label>
