formatting the projects into boxes

--- a/index.html
+++ b/index.html
@@ -28,44 +28,54 @@
 
         <h3>Solo Projects</h3>
         <h4>Finished</h4>
-        <div class="project">
-            <h5>TicTacToe against an AI</h5>
-            <p>A TicTacToe game with a dynamically sized board where you can play against an AI algorithm..</p>
-            <a href="#" target="_blank">View Project</a>
-        </div>
-        <div class="project">
-            <h5>Project 2</h5>
-            <p>Description</p>
-            <a href="#" target="_blank">View Project</a>
+        <div class="project-container">
+            <div class="project">
+                <h5>TicTacToe against an AI</h5>
+                <p>A TicTacToe game with a dynamically sized board where you can play against an AI algorithm..</p>
+                <a href="#" target="_blank">View Project</a>
+            </div>
+            <div class="project">
+                <h5>Project 2</h5>
+                <p>Description</p>
+                <a href="#" target="_blank">View Project</a>
+            </div>
         </div>
 
         <h4>In Progress</h4>
-        <div class="project">
-            <h5>Project 3</h5>
-            <p>Description of in-progress project</p>
-            <a href="#" target="_blank">View Project</a>
+        <div class="project-container">
+            <div class="project">
+                <h5>Project 3</h5>
+                <p>Description of in-progress project</p>
+                <a href="#" target="_blank">View Project</a>
+            </div>
         </div>
 
         <h3>Group Projects</h3>
         <h4>Finished</h4>
-        <div class="project">
-            <h5>Word Search Game</h5>
-            <p>A 16x16 Board Word Search Game build to house multiple users at the same time. Each word is assigned a different number of points, and once all words are found the player with the most points wins!</p>
-            <a href="#" target="_blank">View Project</a>
+        <div class="project-container">
+            <div class="project">
+                <h5>Word Search Game</h5>
+                <p>A 16x16 Board Word Search Game build to house multiple users at the same time. Each word is assigned a different number of points, and once all words are found the player with the most points wins!</p>
+                <a href="#" target="_blank">View Project</a>
+            </div>
         </div>
 
         <h4>In Progress</h4>
-        <div class="project">
-            <h5>A User-Friendly Data Manipulation Website</h5>
-            <p>This website houses mock data for account information, scholarship, award, class, and other information for a small student body and staff. The website provides a user-friendly interface for creating and deleting this data, sorting it, and other basic manipulation abilities.</p>
-            <a href="#" target="_blank">View Project</a>
+        <div class="project-container">
+            <div class="project">
+                <h5>A User-Friendly Data Manipulation Website</h5>
+                <p>This website houses mock data for account information, scholarship, award, class, and other information for a small student body and staff. The website provides a user-friendly interface for creating and deleting this data, sorting it, and other basic manipulation abilities.</p>
+                <a href="#" target="_blank">View Project</a>
+            </div>
         </div>
         
         <h4>In Progress</h4>
-        <div class="project">
-            <h5>ClassQuest</h5>
-            <p>This website takes in a your schedule and compares it against the other schedules in your friendship circle. It automatically finds common available slots in your schedules for things like hangouts or study sessions. It also has an embedded map that shows where each user will be at any given time based on their schedule for the past, present, and future.</p>
-            <a href="#" target="_blank">View Project</a>
+        <div class="project-container">
+            <div class="project">
+                <h5>ClassQuest</h5>
+                <p>This website takes in a your schedule and compares it against the other schedules in your friendship circle. It automatically finds common available slots in your schedules for things like hangouts or study sessions. It also has an embedded map that shows where each user will be at any given time based on their schedule for the past, present, and future.</p>
+                <a href="#" target="_blank">View Project</a>
+            </div>
         </div>
     </section>
 
@@ -86,7 +96,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2024 Maegan Demers. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
