adding an empty project box for testing

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 <p>Description</p>
                 <a href="#" target="_blank">View Project</a>
             </div>
+            <div class="project">
+                <h5>Project 3</h5>
+                <p>Description</p>
+                <a href="#" target="_blank">View Project</a>
+            </div>
         </div>
 
         <h4>In Progress</h4>
