--- a/index.html
+++ b/index.html
@@ -27,123 +27,135 @@
         <h2>My Projects</h2>
 
         <h3>Solo Projects</h3>
+
         <h4>Finished</h4>
+        <!-- TicTacToe, mocks -->
         <div class="project-container">
-            <div class="project">
+            <div class="project-container">
                 <!-- TicTacToe -->
-                <h5>TicTacToe against an AI</h5>
-                <p>A TicTacToe game with a dynamically sized board where you can play against an AI algorithm.</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>TicTacoToe Game</h5>
+                        <p>A TicTacToe game with a dynamically sized board where you can play against an AI algorithm.</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
                 <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>mock project</h5>
+                        <p>description</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
                 <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
-                <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>mock project</h5>
+                        <p>description</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
             </div>
         </div>
 
         <h4>In Progress</h4>
+        <!-- mocks -->
         <div class="project-container">
-            <div class="project">
+            <div class="project-container">
                 <!-- mock project -->
-                <h5>Mock Project</h5>
-                <p>Description of in-progress project</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>mock project</h5>
+                        <p>description</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
                 <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>mock project</h5>
+                        <p>description</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
                 <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>mock project</h5>
+                        <p>description</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
             </div>
         </div>
         
         <h3>Group Projects</h3>
         <h4>Finished</h4>
+
+        <!-- Databases website, Word Search Game, mocks -->
         <div class="project-container">
-            <div class="project">
-                <!-- Word Search Game -->
-                <h5>Word Search Game</h5>
-                <p>A 30x30 Board Word Search Game build to house multiple users at the same time. Each word is assigned a different number of points, and once all words are found the player with the most points wins!</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
+            <div class="project-container">
+                <!-- Databases Website -->
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>A User-Friendly Data Manipulation Website</h5>
+                        <p>This website houses mock data for account information, scholarship, award, class, and other information for a small student body and staff. The website provides a user-friendly interface for creating and deleting this data, sorting it, and other basic manipulation abilities.</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>Word Search Game</h5>
+                        <p>A 30x30 Board Word Search Game build to house multiple users at the same time. Each word is assigned a different number of points, and once all words are found the player with the most points wins!</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
                 <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
-                <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>mock project</h5>
+                        <p>description</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
             </div>
         </div>
 
         <h4>In Progress</h4>
+
+        <!-- ClassQuest, mocks -->
         <div class="project-container">
-            <div class="project">
-                <!-- Databases Website -->
-                <h5>A User-Friendly Data Manipulation Website</h5>
-                <p>This website houses mock data for account information, scholarship, award, class, and other information for a small student body and staff. The website provides a user-friendly interface for creating and deleting this data, sorting it, and other basic manipulation abilities.</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
-                <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
-                <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-        </div>
-        
-        <h4>In Progress</h4>
-        <div class="project-container">
-            <div class="project">
+            <div class="project-container">
                 <!-- ClassQuest -->
-                <h5>ClassQuest</h5>
-                <p>This website takes in a your schedule and compares it against the other schedules in your friendship circle. It automatically finds common available slots in your schedules for things like hangouts or study sessions. It also has an embedded map that shows where each user will be at any given time based on their schedule for the past, present, and future.</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>ClassQuest</h5>
+                        <p>This website takes in a your schedule and compares it against the other schedules in your friendship circle. It automatically finds common available slots in your schedules for things like hangouts or study sessions. It also has an embedded map that shows where each user will be at any given time based on their schedule for the past, present, and future.</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
                 <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
-            </div>
-            <div class="project">
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>mock project</h5>
+                        <p>description</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
                 <!-- mock project -->
-                <h5>mock project</h5>
-                <p>Description</p>
-                <a href="#" target="_blank">View Project</a>
+                <div class="project">
+                    <a href="#" class="project-link">
+                        <h5>mock project</h5>
+                        <p>description</p>
+                        <span class="link-text">View Project</span>
+                    </a>
+                </div>
             </div>
         </div>
-    </section>
+
+
+
 
     <section id="contact">
         <h2>Contact Me</h2>
